zero-schema-macros/tests/ui/fail/45_optional_forbidden_attribute.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    #[zero(capacity = 4)]
    value: Option<Missing>,
}

fn main() {}
